build: add rpi build tag to makefile

--- a/src/Makefile
+++ b/src/Makefile
@@ -31,6 +31,7 @@ M = $(shell printf "\033[34;1m▶\033[0m")
 .PHONY: all
 all: fmt vendor main-packr.go | $(BASE) ; $(info $(M) building executable…) @ ## Build program binary
 	$Q cd $(BASE) && CC=$(CGOCC) GOOS=$(GOOS) GOARCH=$(GOARCH) CGO_ENABLED=1 $(GO) build \
+		-tags 'rpi' \
 		-gcflags '-e' \
 		-ldflags '-X main.version=$(VERSION) -X main.buildDate=$(DATE) -X main.gitCommit=${GIT_COMMIT} -X main.gitState=${GIT_STATE}' \
 		-o bin/$(PACKAGE) .
