kicad: Update schematic and pcb layout
* Connect serial gpio signals through inverter gates
* Connect all leds to gpio pins
* Update eeprom to 24c512
* Update pcb footprints to new names (kicad update)
* Update schematic/board revision to 1.2

--- a/kicad/bom.ini
+++ b/kicad/bom.ini
@@ -20,6 +20,8 @@ include_version_number = 1
 fit_field = Config
 ; Make a backup of the bom before generating the new one, using the folloing template
 make_backup = %O.tmp
+output_file_name = %O_bom_%v%V
+variant_file_name_format = _(%V)
 
 [IGNORE_COLUMNS]
 ; Any column heading that appears here will be excluded from the Generated BoM
